# masters-puc-geo-comp

./: README.md  main.py  pyproject.toml
assignments/01_minimum_circle/: README.md  minimum_circle.ipynb
assignments/02_polygon_triangulation/: README.md  polygon_triangulation.ipynb
